--- a/spec/javascripts/fixtures/ticker.html
+++ b/spec/javascripts/fixtures/ticker.html
@@ -18,6 +18,7 @@
             <option value="euro">&euro;</option>
             <option value="yen">&yen;</option>
             <option value="Kr">Kr</option>
+            <option value="CHF">CHF</option>
           </select>
           <input id="hourly_rate" type="text"
                  name="hourly_rate" value="" />
