--- a/spec/javascripts/fixtures/ticker.html
+++ b/spec/javascripts/fixtures/ticker.html
@@ -29,7 +29,7 @@
   <div id="display">
     <div class="odometer"></div>
     <form class="stop" action="#" onsubmit="return false">
-      <input type="submit" value="stop the bleeding">
+      <input type="submit" value="stop">
     </form>
     <p id="started_at"></p>
   </div>
