--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   <div class="odometer"></div>
   <p id="started_at" class="small"></p>
   <form class="stop" action="#">
-    <input type="submit" value="stop the bleeding">
+    <input type="submit" value="stop">
   </form>
 </div>
 
